fixed deployment button color in dark mode

--- a/style.css
+++ b/style.css
@@ -284,3 +284,6 @@ list-style-type: square;
   background-color: gainsboro;
 }
 
+.btn-muted{
+  color: black;
+}
